[tool.poetry]
name = "poetry-lock"
version = "0.1.0"
description = "pytest-lock is a pytest plugin that allows you to \"lock\" the results of unit tests, storing them in a local cache. This is particularly useful for tests that are resource-intensive or don't need to be run every time. When the tests are run subsequently, pytest-lock will compare the current results with the locked results and issue a warning if there are any discrepancies."
authors = ["CHAUMONT Pierre <pierre.chaumont@scalian.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.3"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"
ruff = "^0.1.9"
bandit = "^1.7.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.entry-points.pytest11]
pytest-lock = "src.pytest_lock.__main__:pytest_lock"
